--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.labo.kaji.millefeuille"
-        minSdkVersion 8
+        minSdkVersion 11
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.nineoldandroids:library:2.4.0+'
+    compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
 }
