--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.labo.kaji.millefeuille.sample"
         minSdkVersion 11
         targetSdkVersion 22
         versionCode 1
@@ -21,12 +20,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:design:22.2.1'
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'com.android.support:cardview-v7:22.2.1'
     compile 'com.nineoldandroids:library:2.4.0'
-    compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
-    compile 'co.trikita:log:1.1.5'
-    compile project(':lib')
 }
