--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
     compile 'co.trikita:log:1.1.5'
-    compile project(':lib')
+    compile project(':millefeuille')
 }
