--- a/millefeuille/build.gradle
+++ b/millefeuille/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.facebook.rebound:rebound:0.3.8'
     compile 'com.nineoldandroids:library:2.4.0'
 }
